# tsf-c

./: .gitignore  .hgignore  LICENSE  Makefile  README.txt
src/: tsf.c  tsf.h
src/blosc/: blosc.h
src/jansson/: jansson.h  jansson_config.h  strconv.c  value.c
src/lz4/: CMakeLists.txt  VERSION.txt
src/zstd/: CMakeLists.txt  VERSION.txt
tests/: low_level.tsf  test_helper.h  tests.c
